<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_lang_bg"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/alert_lang_bg_title"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:text="@string/choose_contact_options"
        android:gravity="center_vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        />

    <TextView
        android:id="@+id/tv_customer_care"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="18sp"
        android:text="@string/customer_care"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:background="@color/white"


        />

    <TextView
        android:id="@+id/tv_chat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="18sp"
        android:text="@string/live_chat"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:background="@color/white"

        />
</LinearLayout>