<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/login"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity"
    >

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/close_icon"
        android:padding="15dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"

        >
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>

        <!-- add some padding -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:textColorHint="@color/white"


            >


            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/phone"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/user"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <!-- password input -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            app:passwordToggleTint="@color/white"
            app:passwordToggleEnabled="true"


            >
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/Password"
                android:cursorVisible="true"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:drawablePadding="10dp"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/lock_icon"
                android:singleLine="true"


                />
        </android.support.design.widget.TextInputLayout>



        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            app:mrl_rippleAlpha=".4"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleRoundedCorners="5dp"
            app:mrl_rippleDuration="600"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="@color/gray2"
            >
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_login_bg"
                android:textSize="20sp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:letterSpacing="0.1"
                />

        </com.balysv.materialripple.MaterialRippleLayout>

        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/forget_pass"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/new_account"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"

                android:text="@string/areyounew"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"

                android:textColor="@color/colorPrimary"
                android:text="@string/regist_now"/>



        </LinearLayout>
    </LinearLayout>




</LinearLayout>
</ScrollView>