<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alatheer.menu.activities.AboutActivity"
    android:background="@color/gray2"
    android:orientation="vertical"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/about"
                    />
                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/back3"
                    android:padding="22dp"

                    />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/about_yummy"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray2"/>
            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/terms_amp_conditions"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray2"/>
            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/privacy_policy"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>