<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/login"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity"
        >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/close_icon"
            android:padding="15dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"

            >

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_acount"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <!-- add some padding -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/first_name_container"
                    android:layout_width="0dp"
                    android:layout_weight="1"                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"

                    >


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:cursorVisible="true"
                        android:hint="@string/first_name"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:singleLine="true"

                        />

                </android.support.design.widget.TextInputLayout>




            </LinearLayout>
            <!-- add some padding -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/white"

                >


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:cursorVisible="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:singleLine="true"
                  />

            </android.support.design.widget.TextInputLayout>




            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtPhone_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    >

                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edt_phone_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColorHint="@color/white"

                    >


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:cursorVisible="true"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:singleLine="true"
                        />




                </android.support.design.widget.TextInputLayout>
            </FrameLayout>

            <!-- password input -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/white"
                app:passwordToggleTint="@color/white"
                app:passwordToggleEnabled="true"


                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="30dp"
                    android:hint="@string/Password"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:singleLine="true"
                />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/register_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_login_bg"
                android:elevation="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/creat_acount"
                android:textColor="@color/white"

                android:letterSpacing="0.1"
                />



            <LinearLayout
                android:id="@+id/txt_terms_register"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"

                    android:text="@string/text1_register"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"

                    android:textColor="@color/colorPrimary"
                    android:text="@string/text2_register"/>



            </LinearLayout>
        </LinearLayout>




    </LinearLayout>
</ScrollView>